Sat Apr 17 09:04:24 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (--with-{ruby-version,{site,vendor}dir}): use
	  AS_HELP_STRING.

Sat Apr 17 08:57:41 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/net/smtp.rb (Net::SMTP#rcptto_list): continue when at least
	  one RCPT is accepted.  based on a patch from Kero van Gelder at
	  [ruby-core:26190].

Sat Apr 17 08:35:14 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* Makefile.in, configure.in, common.mk, */Makefile.sub (CHDIR): cd
	  using phisical directory.

Sat Apr 17 07:02:37 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/ruby/test_thread.rb (TestThreadGroup#test_uninitialized):
	  typo.

	* test/webrick/utils.rb (TestWEBrick#start_server): add log for
	  test_filehandler.rb

Wed Apr 14 17:53:44 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (appendline): should terminate.
	  http://golf.shinh.org/p.rb?DECimal+number+to+BINary#Ruby

	* string.c (rb_string_value_cstr): make NUL terminated if it is
	  not done.

Mon Apr 12 21:47:41 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* LEGAL: separated the section for parse.c.  contributed by Paul
	  Betteridge in [ruby-core:29472].

Mon Apr 12 12:37:06 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/dl/depend: add -I. for cross compiling.

Sun Apr 11 16:48:13 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (DllMain, ruby_init_loadpath): use DLL instance handle given
	  to DllMain instead of VirtualQuery so that loadpath becomes relative
	  from the DLL on WinCE too.

	* ruby.c (ruby_init_loadpath): do not mangle relative path.

	* ruby.c (ruby_init_loadpath): fix for the length of mangled path.
	  [ruby-core:29398]

Thu Apr  8 14:32:48 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* configure.in: --disable-install-doc should prohibit doxygen.

Wed Apr  7 09:44:48 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (Makefile): qoute init-commands.
